# Tiny-SysY-Compiler

./: .gitignore  CMakeLists.txt  GenrateLLVMIR.sh  README.md  bblock.c  bblock.h  cds.h  control.c  control.h  function.c  function.h  instruction.c  instruction.h  interval.c  interval.h  judge  liveness.c  liveness.h  mv.sh  run_test.sh  submit.sh  symtab.c  symtab.h  tacmain.c  type.c  type.h  use.c  use.h  user.c  user.h  util.h  value.c  value.h
ans/: 00_main.ll  01_var_defn2.ll  02_var_defn3.ll  03_arr_defn2.ll  04_arr_defn3.ll  05_arr_defn4.ll  06_const_var_defn2.ll  07_const_var_defn3.ll  08_const_array_defn.ll  09_func_defn.ll  10_var_defn_func.ll  11_add2.ll  12_addc.ll  13_sub2.ll  14_subc.ll  15_mul.ll  16_mulc.ll  17_div.ll  18_divc.ll  19_mod.ll  20_rem.ll  21_if_test2.ll  22_if_test3.ll  23_if_test4.ll  24_if_test5.ll  25_while_if.ll  26_while_test1.ll  27_while_test2.ll  28_while_test3.ll  29_break.ll  30_continue.ll  31_while_if_test1.ll  32_while_if_test2.ll  33_while_if_test3.ll  34_arr_expr_len.ll  35_op_priority1.ll  36_op_priority2.ll  37_op_priority3.ll  38_op_priority4.ll  39_op_priority5.ll  (+61 more)
back_end/: arm.c  arm.h  graph_color.c  graph_color.h  line_scan.c  line_scan.h  live_interval.c  live_interval.h  offset.c  offset.h  register_allocation.c  register_allocation.h
container/: hash_map.h  hash_set.h  list.h  priority_queue.h  queue.h  stack.h  tree_map.h  trie.h  vector.h
front_end/: ast.c  ast.h  auto_lex.l  fix_array.c  fix_array.h  insnode_stack.c  insnode_stack.h  lrparser.y  past_stack.c  past_stack.h  travel.c  travel.h  tree_balancing.c  tree_balancing.h  value_stack.c  value_stack.h
ir/: bblock.c  bblock.h  function.c  function.h  instruction.c  instruction.h  interval.c  interval.h  liveness.c  liveness.h  symtab.c  symtab.h  type.c  type.h  use.c  use.h  user.c  user.h  value.c  value.h  variable_storage_space.c  variable_storage_space.h
ir/opt/: CommonSubexpressionElimination.c  CommonSubexpressionElimination.h  ConstFolding.c  ConstFolding.h  DVNT.c  DVNT.h  DeadCodeElimination.c  DeadCodeElimination.h  LICM.c  LICM.h  Loop.c  Loop.h  PassManager.c  PassManager.h  RemoveUselessFunction.c  RemoveUselessFunction.h  SCCP.c  SCCP.h  bb_divide.c  bb_divide.h  bbdivide.c  bbdivide.h  constfolding.c  constfolding.h  cse.c  cse.h  dce.c  dce.h  dominance.c  dominance.h  dvnt.c  dvnt.h  func_inline.c  func_inline.h  gcm.c  gcm.h  globalopt.c  globalopt.h  inliner.c  inliner.h  (+45 more)
libs/: bstrlib.c  bstrlib.h  sc_array.h  sc_list.c  sc_list.h  sc_map.c  sc_map.h
math/: hash.h
run_test_src/: judge_out.c
src/: hash.c  hash_map.c  hash_set.c  list.c  priority_queue.c  queue.c  stack.c  tree_map.c  trie.c  vector.c
test/: test1.bc  test1.c  test1.ll  test2.c  test2.ll  test3.bc  test3.c  test3.ll  test35.bc  test35.c  test35.ll  test36.bc  test36.c  test36.ll  test4.c  toCFG.sh
test_cases/: 00_main.ll  01_var_defn2.ll  02_var_defn3.ll  03_arr_defn2.ll  04_arr_defn3.c  04_arr_defn3.ll  05_arr_defn4.c  05_arr_defn4.ll  06_const_var_defn2.ll  07_const_var_defn3.ll  08_const_array_defn.ll  09_func_defn.ll  10_var_defn_func.ll  11_add2.ll  12_addc.ll  136_rotate.out  13_sub2.ll  14_subc.ll  15_mul.ll  16_mulc.ll  17_div.ll  18_divc.ll  19_mod.ll  20_rem.ll  21_if_test2.bc  21_if_test2.c  21_if_test2.ll  22_if_test3.ll  23_if_test4.ll  24_if_test5.bc  24_if_test5.ll  25_while_if.ll  26_while_test1.ll  27_while_test2.ll  28_while_test3.ll  29_break.ll  30_continue.ll  31_while_if_test1.ll  32_while_if_test2.ll  33_while_if_test3.c  (+87 more)
